chore: update title/SEO copy (X旧Twitter表記)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
   <!-- ========= SEO: basic ========= -->
-  <title>X検索コマンドメーカー｜from・期間・いいね/RT・画像/動画を1分で生成</title>
+  <title>X(旧Twitter)検索コマンドメーカー｜from・期間・いいね/RT・画像/動画を1分で生成</title>
   <meta name="description" content="X（旧Twitter）の検索コマンド（from/since/until/min_faves/min_retweets/filter:images/videos）を、フォーム入力だけで自動生成。コピーしてそのままX検索へ。サーバ送信なし・無料。" />
   <meta name="robots" content="index,follow,max-image-preview:large" />
   <link rel="canonical" href="./" />
@@ -22,7 +22,7 @@
   <meta property="og:description" content="X（旧Twitter）の検索オペレーターをフォーム入力だけで自動生成。コピー→検索が一瞬。" />
   <!-- 画像が無い場合でも動きます。用意できたら og.png を置くと強い -->
   <meta property="og:image" content="./favicon.png" />
-  <meta property="og:image:alt" content="X検索コマンドメーカー" />
+  <meta property="og:image:alt" content="（旧Twitter）X検索コマンドメーカー" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="X検索コマンドメーカー（旧Twitter）" />
   <meta name="twitter:description" content="from/期間/いいね/RT/画像/動画の検索コマンドを1分で生成。" />
@@ -43,7 +43,7 @@
   {
     "@context":"https://schema.org",
     "@type":"WebApplication",
-    "name":"X検索コマンドメーカー",
+    "name":"X（旧Twitter）検索コマンドメーカー",
     "applicationCategory":"UtilitiesApplication",
     "operatingSystem":"Web",
     "description":"X（旧Twitter）の検索コマンド（from/since/until/min_faves/min_retweets/filter:images/videos）をフォーム入力だけで自動生成する無料ツール。",
@@ -57,7 +57,7 @@
   <div class="wrap">
     <header class="header">
       <div>
-        <h1>X検索コマンドメーカー</h1>
+        <h1>X（旧Twitter）検索コマンドメーカー</h1>
         <p class="sub">X（旧Twitter）の検索オペレーターを、フォーム入力だけで自動生成。</p>
       </div>
       <div class="meta">
@@ -145,10 +145,6 @@
                 <input id="onlyImages" type="checkbox" />
                 画像付きのみ（filter:images）
               </label>
-            </div>
-
-            <div class="help">
-              ※ よく使われるのは <b>from / 期間 / いいね・RT</b> だけです。
             </div>
           </div>
         </details>
