chore: add English link + hreflang

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <meta name="description" content="X（旧Twitter）の検索コマンド（from/since/until/min_faves/min_retweets/filter:images/videos）を、フォーム入力だけで自動生成。コピーしてそのままX検索へ。サーバ送信なし・無料。" />
   <meta name="robots" content="index,follow,max-image-preview:large" />
   <link rel="canonical" href="./" />
+  <link rel="alternate" hreflang="ja" href="https://x-command.shorts-ranking.com/" />
+  <link rel="alternate" hreflang="en" href="https://x-command-en.shorts-ranking.com/" />
+  <link rel="alternate" hreflang="x-default" href="https://x-command.shorts-ranking.com/" />
+
 
   <!-- favicon -->
   <link rel="icon" href="./favicon.ico">
@@ -62,6 +66,9 @@
       </div>
       <div class="meta">
         <span class="pill" id="pillLen">文字数: 0</span>
+          <a class="pill" href="https://x-command-en.shorts-ranking.com/" style="text-decoration:none">
+           English
+          </a>
       </div>
     </header>
 
